--- a/src/Marvelous.Core/Localization.resx
+++ b/src/Marvelous.Core/Localization.resx
@@ -313,7 +313,7 @@
     <value>Wonderous app</value>
   </data>
   <data name="homeMenuAboutVisualAssets" xml:space="preserve">
-    <value>Visual assets are copyrighted and used with permission from Google.</value>
+    <value>Visual assets are copyrighted and used with permission.</value>
   </data>
   <data name="homeMenuAboutByTeam" xml:space="preserve">
     <value>The original app is made by the team at </value>
