--- a/src/Marvelous.Core/Localization.resx
+++ b/src/Marvelous.Core/Localization.resx
@@ -846,7 +846,8 @@ Under the rule of the Qing dynasty, China's borders extended beyond the walls an
     <value>textile</value>
   </data>
   <data name="machuPicchuTitle" xml:space="preserve">
-    <value>Machu Picchu</value>
+    <value>Machu
+Picchu</value>
   </data>
   <data name="machuPicchuSubTitle" xml:space="preserve">
     <value>Citadel of the Inca</value>
